<?xml version="1.0" encoding="utf-8"?>
<!--Generated by crowdin.net-->
<resources>
	<string name="mpp_xmpp_name">XMPP</string>
	<string name="mpp_xmpp_name_facebook">Facebook</string>
	<string name="mpp_xmpp_name_yandex">Yandex</string>
	<string name="mpp_xmpp_name_qip">QIP</string>
	<string name="mpp_xmpp_name_google">Google Talk</string>
	<string name="mpp_xmpp_login_hint_custom">user_name@domain.xx</string>
	<string name="mpp_xmpp_login_hint">user_name</string>
	<string name="mpp_xmpp_server">Server</string>
	<string name="mpp_xmpp_login">Login</string>
	<string name="mpp_xmpp_password">Password</string>
	<string name="mpp_xmpp_resource">Resource</string>
	<string name="mpp_xmpp_server_must_be_set">Server must be set</string>
	<string name="mpp_xmpp_login_must_be_set">Login must be set</string>
	<string name="mpp_xmpp_password_must_be_set">Password must be set</string>
	<string name="mpp_xmpp_port">Port</string>
	<string name="mpp_xmpp_show_advanced_options">Show advanced options</string>
	<string name="mpp_xmpp_hide_advanced_options">Hide advanced options</string>
	<string name="mpp_xmpp_invalid_port_number">Invalid port number</string>
	<string name="mpp_xmpp_security_mode">TLS</string>
	<string name="mpp_xmpp_security_mode_required">Use always</string>
	<string name="mpp_xmpp_security_mode_enabled">Use if supported by server</string>
	<string name="mpp_xmpp_security_mode_disabled">Don\'t use</string>
	<string name="mpp_xmpp_use_username_without_domain_as_login">Use username without domain as login (remove
		@domain.xx)
	</string>
	<string name="mpp_xmpp_no_domain_in_username">Domain must be set in username (username@domain.xx)</string>
</resources>
