<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:a="http://schemas.android.com/apk/res/android"
			a:layout_width="match_parent"
			a:layout_height="match_parent">

	<LinearLayout style="?mpp_fragment">

		<TextView
				a:id="@+id/mpp_fragment_title"
				style="?mpp_fragment_title"/>

		<TextView
				a:id="@+id/mpp_xmpp_server_label"
				a:text="@string/mpp_xmpp_server"
				style="?mpp_form_label"/>

		<EditText
				a:id="@+id/mpp_xmpp_server_edittext"
				style="?mpp_form_edittext"/>

		<TextView
				a:id="@+id/mpp_xmpp_login_label"
				a:text="@string/mpp_xmpp_login"
				style="?mpp_form_label"/>

		<EditText
				a:id="@+id/mpp_xmpp_login_edittext"
				style="?mpp_form_edittext"/>

		<TextView
				a:id="@+id/mpp_xmpp_password_label"
				a:text="@string/mpp_xmpp_password"
				style="?mpp_form_label"/>

		<EditText
				a:id="@+id/mpp_xmpp_password_edittext"
				style="?mpp_form_password_edittext"/>

		<TextView
				a:id="@+id/mpp_xmpp_resource_label"
				a:text="@string/mpp_xmpp_resource"
				style="?mpp_form_label"/>

		<EditText
				a:id="@+id/mpp_xmpp_resource_edittext"
				a:text="Messenger++"
				a:visibility="gone"
				style="?mpp_form_edittext"/>

		<include layout="@layout/mpp_fragment_edit_buttons"/>

	</LinearLayout>
</ScrollView>