<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2014 serso aka se.solovyev
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:a="http://schemas.android.com/apk/res/android"
			a:layout_width="match_parent"
			a:layout_height="match_parent">

	<LinearLayout style="?mpp_fragment">

		<include layout="@layout/mpp_realm_conf_xmpp_fields"/>

		<TextView
				a:id="@+id/mpp_xmpp_advanced_options_link"
				a:text="@string/mpp_xmpp_show_advanced_options"
				style="?mpp_form_label"/>

		<LinearLayout a:id="@+id/mpp_xmpp_advanced_options"
					  a:orientation="vertical"
					  a:layout_width="match_parent"
					  a:layout_height="wrap_content"
					  a:visibility="gone">

			<TextView
					a:id="@+id/mpp_xmpp_port_label"
					a:text="@string/mpp_xmpp_port"
					style="?mpp_form_label"/>

			<EditText
					a:id="@+id/mpp_xmpp_port_edittext"
					a:inputType="number"
					a:digits="0123456789"
					style="?mpp_form_edittext"/>

			<TextView
					a:id="@+id/mpp_xmpp_resource_label"
					a:text="@string/mpp_xmpp_resource"
					style="?mpp_form_label"/>

			<EditText
					a:id="@+id/mpp_xmpp_resource_edittext"
					a:text="Messenger++"
					style="?mpp_form_edittext"/>

		</LinearLayout>

		<include layout="@layout/mpp_fragment_edit_buttons"/>

	</LinearLayout>
</ScrollView>